[project]
name = "hf-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
    "requests>=2.32.5",
    "pydantic>=2.12.3",
    "litellm>=1.0.0",
    "tenacity>=8.0.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "datasets>=4.3.0",
    "huggingface-hub>=1.0.1",
    "fastmcp>=2.4.0",
    "inspect-ai>=0.3.149",
    "lmnr[all]>=0.7.23",
    "transformers>=2.3.0",
    "torch>=2.9.1",
]
